Explore: updates query row to display query status

--- a/public/sass/pages/_explore.scss
+++ b/public/sass/pages/_explore.scss
@@ -255,6 +255,12 @@
   flex-grow: 1;
 }
 
+.query-row-field--with-status {
+  .slate-query-field {
+    margin-right: 30px;
+  }
+}
+
 .query-transactions {
   display: table;
 }
